Plugging in initial hardcoded product grid tile.

--- a/src/app/plp/plp.component.html
+++ b/src/app/plp/plp.component.html
@@ -454,6 +454,9 @@
 
                     <div class="col-xs-12 product-view nopadding">
                       <ul id="view-option-productgrid" class="product-grid-ul grid-view">
+                        <li><div>hello1</div></li>
+                        <li><app-product-grid-tile></app-product-grid-tile></li>
+                        <li><div>hello3</div></li>
                         <li>
                           <article class="product-item">
 
