--- a/src/app/productGridTile/productGridTile.component.html
+++ b/src/app/productGridTile/productGridTile.component.html
@@ -1,1 +1,54 @@
-<div>hello</div>
+<article class="product-item">
+
+  <div class="view-item">
+    <div class="product-img">
+
+      <a href="http://localhost:3288/whole-salted-cashews">
+        <div class="image">
+
+          <img id="145" class="img-responsive b-lazy"
+               src="http://localhost:44762/Data/Media/Catalog/1/250/e4ac192b-17b4-4820-931f-feb604006d66cashews.jpg"
+               alt="Product"/>
+        </div>
+      </a>
+
+      <button onclick="Product.prototype.GetProductDetails(this)"
+              class="btn-card btn-quick-view btn-bg-secondary hvr-shadow"
+              data-review-state-id="" data-product-is-active="" data-value="145"
+              data-isquickview="true" data-toggle="modal" data-target=".quick-view-popup">
+        Quick View
+      </button>
+    </div>
+    <div class="product-details">
+      <a href="http://localhost:3288/whole-salted-cashews">
+        <h4 class="title">Whole Salted Cashews</h4>
+      </a>
+      <div class="product-rating">
+            <span class="star-rating">
+            <i class="zf-star-full"></i>
+            <i class="zf-star-full"></i>
+            <i class="zf-star-full"></i>
+            <i class="zf-star-full"></i>
+            <i class="zf-star-full"></i>
+
+</span>
+
+        5 | (1) <a href="http://localhost:3288/whole-salted-cashews#scrollReview"
+                   id="jumpto-readreviews-productTile">Read reviews</a>
+      </div>
+      <div class="price" data-sku="SKWSC123" data-type="">
+                                <span>
+                                    $4.00
+                                </span>
+
+      </div>
+      <div class="item-error-msg">
+        <p class="error-msg"></p>
+      </div>
+      <a href="http://localhost:3288/whole-salted-cashews">View More Details</a>
+
+    </div>
+
+  </div>
+
+</article>
