--- a/src/app/core/shell/header/header.component.html
+++ b/src/app/core/shell/header/header.component.html
@@ -15,6 +15,10 @@
           <i class="fas fa-question-circle"></i>
           <span translate>About</span>
         </a>
+        <a class="nav-item nav-link text-uppercase" routerLink="/plp" routerLinkActive="active">
+          <i class="fas fa-window-maximize"></i>
+          <span translate>Znode MVC Adaptation</span>
+        </a>
       </div>
       <div class="navbar-nav ml-auto">
         <div class="nav-item" ngbDropdown placement="bottom-right">
