Very messy checkin... lots of broken stuff, but decided to move quickly and clean up later.

--- a/src/app/plp/plp.component.html
+++ b/src/app/plp/plp.component.html
@@ -354,18 +354,6 @@
                       <div class="col-xs-12 col-sm-6 nopadding">
                         <h1>Nuts</h1>
                       </div>
-                      <div class="col-xs-12 col-sm-6 nopadding">
-                        <div class="view-mode pull-right">
-                          <span>View Mode: &nbsp;</span>
-                          <a href="javascript:void(0);" class="productview grid-view-opt-active" title="Grid View"><i
-                            class="zf-grid-view"></i></a>
-                          <a href="javascript:void(0);" class="productview list-view-opt" title="List View"><i
-                            class="zf-list-view"></i></a>
-                          <a href="javascript:void(0);" class="productview text-view-opt" title="Text View"><i
-                            class="zf-text-view"></i></a>
-                        </div>
-
-                      </div>
                     </div>
                     <div class="col-sm-12 nopadding">
 
@@ -380,11 +368,11 @@
                               <li class="search-more-nav arrow-left"><a id="prev-page-search" href="javascript: void(0)"
                                                                         data-pageno="" class="button"
                                                                         title="Previous"><i
-                                class='zf-arrow-left-big'></i></a></li>
+                                class='fas fa-angle-left'></i></a></li>
                               <li class="search-more-nav arrow-right"><a id="next-page-search"
                                                                          href="javascript: void(0)" data-pageno=""
                                                                          class="button" title="Next"><i
-                                class='zf-arrow-right-big'></i></a></li>
+                                class='fas fa-angle-right'></i></a></li>
                             </ul>
                             <input data-val="true" data-val-number="The field TotalPages must be a number."
                                    data-val-required="The TotalPages field is required." id="hdnTotalPages"
