--- a/src/app/core/shell/header/header.component.html
+++ b/src/app/core/shell/header/header.component.html
@@ -7,18 +7,12 @@
     </button>
     <div id="navbar-menu" class="collapse navbar-collapse float-xs-none" [ngbCollapse]="menuHidden">
       <div class="navbar-nav">
-        <a class="nav-item nav-link text-uppercase" routerLink="/home" routerLinkActive="active">
-          <i class="fas fa-home"></i>
-          <span translate>Home</span>
-        </a>
-        <a class="nav-item nav-link text-uppercase" routerLink="/about" routerLinkActive="active">
-          <i class="fas fa-question-circle"></i>
-          <span translate>About</span>
-        </a>
-        <a class="nav-item nav-link text-uppercase" routerLink="/plp" routerLinkActive="active">
-          <i class="fas fa-window-maximize"></i>
-          <span translate>Znode MVC Adaptation</span>
-        </a>
+        <div *ngFor="let item of menu.items">
+          <a class="nav-item nav-link text-lowercase" routerLink="/{{item.name}}" routerLinkActive="active">
+            <i class="fas fa-window-maximize"></i>
+            <span translate>{{item.name}}</span>
+          </a>
+        </div>
       </div>
       <div class="navbar-nav ml-auto">
         <div class="nav-item" ngbDropdown placement="bottom-right">
