--- a/src/app/ws2/ws2.component.html
+++ b/src/app/ws2/ws2.component.html
@@ -1,2 +1,5 @@
 <h1>ws2</h1>
-<div *ngFor="let category of categoryList">{{category.text}}</div>
+<div *ngFor="let category of categoryList">
+  <h2>{{category.text}}</h2>
+  <app-product-list [categoryId]="category.Id"></app-product-list>
+</div>
