Dynamically loading header items from WebStore.

--- a/src/app/ws2/productList/productList.component.html
+++ b/src/app/ws2/productList/productList.component.html
@@ -1,6 +1,5 @@
-<h3 style="color: lightblue;">ProductListHere</h3>
 <h5 *ngFor="let product of products">
-  <div>
+  <div style="color: lightblue;">
     Name: {{product.Name}}
   </div>
 </h5>
