Improving product listing in WS 2. Adding compact responsive grid example to WS 3.

--- a/src/app/ws2/productList/productGridTile/productGridTile.component.html
+++ b/src/app/ws2/productList/productGridTile/productGridTile.component.html
@@ -1,54 +1,4 @@
-<!--<article class="product-item">-->
-
-  <!--<div class="view-item">-->
-    <!--<div class="product-img">-->
-
-      <!--<a href="http://localhost:3288/whole-salted-cashews">-->
-        <!--<div class="image">-->
-
-          <!--<img id="product.PublishProductId" class="img-responsive b-lazy"-->
-               <!--[src]="product.ImageSmallPath"-->
-               <!--alt="Product"/>-->
-        <!--</div>-->
-      <!--</a>-->
-
-      <!--<button onclick="Product.prototype.GetProductDetails(this)"-->
-              <!--class="btn-card btn-quick-view btn-bg-secondary hvr-shadow"-->
-              <!--data-review-state-id="" data-product-is-active="" data-value="145"-->
-              <!--data-isquickview="true" data-toggle="modal" data-target=".quick-view-popup">-->
-        <!--Quick View-->
-      <!--</button>-->
-    <!--</div>-->
-    <!--<div class="product-details">-->
-      <!--<a href="http://localhost:3288/whole-salted-cashews">-->
-        <!--<h4 class="title">{{product.Name}}</h4>-->
-      <!--</a>-->
-      <!--<div class="product-rating">-->
-            <!--<span class="star-rating">-->
-            <!--<i class="zf-star-full"></i>-->
-            <!--<i class="zf-star-full"></i>-->
-            <!--<i class="zf-star-full"></i>-->
-            <!--<i class="zf-star-full"></i>-->
-            <!--<i class="zf-star-full"></i>-->
-
-<!--</span>-->
-
-        <!--{{product.Rating}} | ({{product.ProductReviews.length}}) <a href="http://localhost:3288/whole-salted-cashews#scrollReview"-->
-                   <!--id="jumpto-readreviews-productTile">Read reviews</a>-->
-      <!--</div>-->
-      <!--<div class="price" data-sku="SKWSC123" data-type="">-->
-                                <!--<span>-->
-                                    <!--$4.00-->
-                                <!--</span>-->
-
-      <!--</div>-->
-      <!--<div class="item-error-msg">-->
-        <!--<p class="error-msg"></p>-->
-      <!--</div>-->
-      <!--<a href="http://localhost:3288/whole-salted-cashews">View More Details</a>-->
-
-    <!--</div>-->
-
-  <!--</div>-->
-
-<!--</article>-->
+<div style="color: darkorchid;">Name: {{product.Name}}</div>
+<img id="product.PublishProductId" class="img-responsive b-lazy"
+     [src]="product.ImageSmallPath"
+     alt="Product"/>
