--- a/src/app/ws2/productList/productList.component.html
+++ b/src/app/ws2/productList/productList.component.html
@@ -1,5 +1,1 @@
-<h5 *ngFor="let product of products">
-  <div style="color: lightblue;">
-    Name: {{product.Name}}
-  </div>
-</h5>
+<app-product-grid-tile class="grid" *ngFor="let product of products" [product]="product"></app-product-grid-tile>
