--- a/src/app/ws3/ws3.component.html
+++ b/src/app/ws3/ws3.component.html
@@ -1,1 +1,92 @@
 <h1>ws3</h1>
+
+<section class="gallery-block compact-gallery">
+  <div class="container">
+    <div class="heading">
+      <h2>Compact Gallery</h2>
+    </div>
+    <div class="row no-gutters">
+      <div class="col-md-6 col-lg-4 item zoom-on-hover">
+        <a class="lightbox" href="http://demo.tutorialzine.com/2018/03/3-amazing-bootstrap-4-gallery-templates/assets/img/image1.jpg">
+          <img class="img-fluid image" src="http://demo.tutorialzine.com/2018/03/3-amazing-bootstrap-4-gallery-templates/assets/img/image1.jpg">
+          <span class="description">
+                            <span class="description-heading">Lorem Ipsum</span>
+                            <span class="description-body">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc quam urna.Lorem ipsum dolor sit amet, consectetur adipiscing elit.</span>
+                        </span>
+        </a>
+      </div>
+      <div class="col-md-6 col-lg-4 item zoom-on-hover">
+        <a class="lightbox" href="http://demo.tutorialzine.com/2018/03/3-amazing-bootstrap-4-gallery-templates/assets/img/image2.jpg">
+          <img class="img-fluid image" src="http://demo.tutorialzine.com/2018/03/3-amazing-bootstrap-4-gallery-templates/assets/img/image2.jpg">
+          <span class="description">
+                            <span class="description-heading">Lorem Ipsum</span>
+                            <span class="description-body">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc quam urna.Lorem ipsum dolor sit amet, consectetur adipiscing elit.</span>
+                        </span>
+        </a>
+      </div>
+      <div class="col-md-6 col-lg-4 item zoom-on-hover">
+        <a class="lightbox" href="http://demo.tutorialzine.com/2018/03/3-amazing-bootstrap-4-gallery-templates/assets/img/image3.jpg">
+          <img class="img-fluid image" src="http://demo.tutorialzine.com/2018/03/3-amazing-bootstrap-4-gallery-templates/assets/img/image3.jpg">
+          <span class="description">
+                            <span class="description-heading">Lorem Ipsum</span>
+                            <span class="description-body">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc quam urna.Lorem ipsum dolor sit amet, consectetur adipiscing elit.</span>
+                        </span>
+        </a>
+      </div>
+      <div class="col-md-6 col-lg-4 item zoom-on-hover">
+        <a class="lightbox" href="http://demo.tutorialzine.com/2018/03/3-amazing-bootstrap-4-gallery-templates/assets/img/image4.jpg">
+          <img class="img-fluid image" src="http://demo.tutorialzine.com/2018/03/3-amazing-bootstrap-4-gallery-templates/assets/img/image4.jpg">
+          <span class="description">
+                            <span class="description-heading">Lorem Ipsum</span>
+                            <span class="description-body">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc quam urna.Lorem ipsum dolor sit amet, consectetur adipiscing elit.</span>
+                        </span>
+        </a>
+      </div>
+      <div class="col-md-6 col-lg-4 item zoom-on-hover">
+        <a class="lightbox" href="http://demo.tutorialzine.com/2018/03/3-amazing-bootstrap-4-gallery-templates/assets/img/image5.jpg">
+          <img class="img-fluid image" src="http://demo.tutorialzine.com/2018/03/3-amazing-bootstrap-4-gallery-templates/assets/img/image5.jpg">
+          <span class="description">
+                            <span class="description-heading">Lorem Ipsum</span>
+                            <span class="description-body">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc quam urna.Lorem ipsum dolor sit amet, consectetur adipiscing elit.</span>
+                        </span>
+        </a>
+      </div>
+      <div class="col-md-6 col-lg-4 item zoom-on-hover">
+        <a class="lightbox" href="http://demo.tutorialzine.com/2018/03/3-amazing-bootstrap-4-gallery-templates/assets/img/image6.jpg">
+          <img class="img-fluid image" src="http://demo.tutorialzine.com/2018/03/3-amazing-bootstrap-4-gallery-templates/assets/img/image6.jpg">
+          <span class="description">
+                            <span class="description-heading">Lorem Ipsum</span>
+                            <span class="description-body">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc quam urna.Lorem ipsum dolor sit amet, consectetur adipiscing elit.</span>
+                        </span>
+        </a>
+      </div>
+      <div class="col-md-6 col-lg-4 item zoom-on-hover">
+        <a class="lightbox" href="http://demo.tutorialzine.com/2018/03/3-amazing-bootstrap-4-gallery-templates/assets/img/image7.jpg">
+          <img class="img-fluid image" src="http://demo.tutorialzine.com/2018/03/3-amazing-bootstrap-4-gallery-templates/assets/img/image7.jpg">
+          <span class="description">
+                            <span class="description-heading">Lorem Ipsum</span>
+                            <span class="description-body">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc quam urna.Lorem ipsum dolor sit amet, consectetur adipiscing elit.</span>
+                        </span>
+        </a>
+      </div>
+      <div class="col-md-6 col-lg-4 item zoom-on-hover">
+        <a class="lightbox" href="http://demo.tutorialzine.com/2018/03/3-amazing-bootstrap-4-gallery-templates/assets/img/image8.jpg">
+          <img class="img-fluid image" src="http://demo.tutorialzine.com/2018/03/3-amazing-bootstrap-4-gallery-templates/assets/img/image8.jpg">
+          <span class="description">
+                            <span class="description-heading">Lorem Ipsum</span>
+                            <span class="description-body">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc quam urna.Lorem ipsum dolor sit amet, consectetur adipiscing elit.</span>
+                        </span>
+        </a>
+      </div>
+      <div class="col-md-6 col-lg-4 item zoom-on-hover">
+        <a class="lightbox" href="http://demo.tutorialzine.com/2018/03/3-amazing-bootstrap-4-gallery-templates/assets/img/image9.jpg">
+          <img class="img-fluid image" src="http://demo.tutorialzine.com/2018/03/3-amazing-bootstrap-4-gallery-templates/assets/img/image9.jpg">
+          <span class="description">
+                            <span class="description-heading">Lorem Ipsum</span>
+                            <span class="description-body">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc quam urna.Lorem ipsum dolor sit amet, consectetur adipiscing elit.</span>
+                        </span>
+        </a>
+      </div>
+    </div>
+  </div>
+</section>
