--- a/src/app/ws3/ws3.component.html
+++ b/src/app/ws3/ws3.component.html
@@ -7,6 +7,33 @@
     </div>
     <div class="row no-gutters">
       <div class="col-md-6 col-lg-4 item zoom-on-hover">
+        <a class="lightbox" href="http://localhost:44762/Data/Media/Catalog/1/250/e4ac192b-17b4-4820-931f-feb604006d66cashews.jpg">
+          <img class="img-fluid image" src="http://localhost:44762/Data/Media/Catalog/1/250/e4ac192b-17b4-4820-931f-feb604006d66cashews.jpg">
+          <span class="description">
+                            <span class="description-heading">Lorem Ipsum</span>
+                            <span class="description-body">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc quam urna.Lorem ipsum dolor sit amet, consectetur adipiscing elit.</span>
+                        </span>
+        </a>
+      </div>
+      <div class="col-md-6 col-lg-4 item zoom-on-hover">
+        <a class="lightbox" href="http://localhost:44762/Data/Media/Catalog/1/250/a84c2143-a0b0-4915-8f71-4e8db23144ecpistachios.jpg">
+          <img class="img-fluid image" src="http://localhost:44762/Data/Media/Catalog/1/250/a84c2143-a0b0-4915-8f71-4e8db23144ecpistachios.jpg">
+          <span class="description">
+                            <span class="description-heading">Lorem Ipsum</span>
+                            <span class="description-body">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc quam urna.Lorem ipsum dolor sit amet, consectetur adipiscing elit.</span>
+                        </span>
+        </a>
+      </div>
+      <div class="col-md-6 col-lg-4 item zoom-on-hover">
+        <a class="lightbox" href="http://localhost:44762/Data/Media/Catalog/1/250/ca0d7e87-0433-4059-8c90-118a7a1b64c0honeyroastedpeanuts.jpg">
+          <img class="img-fluid image" src="http://localhost:44762/Data/Media/Catalog/1/250/ca0d7e87-0433-4059-8c90-118a7a1b64c0honeyroastedpeanuts.jpg">
+          <span class="description">
+                            <span class="description-heading">Lorem Ipsum</span>
+                            <span class="description-body">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc quam urna.Lorem ipsum dolor sit amet, consectetur adipiscing elit.</span>
+                        </span>
+        </a>
+      </div>
+      <div class="col-md-6 col-lg-4 item zoom-on-hover">
         <a class="lightbox" href="http://demo.tutorialzine.com/2018/03/3-amazing-bootstrap-4-gallery-templates/assets/img/image1.jpg">
           <img class="img-fluid image" src="http://demo.tutorialzine.com/2018/03/3-amazing-bootstrap-4-gallery-templates/assets/img/image1.jpg">
           <span class="description">
