--- a/src/app/ws3/ws3.component.scss
+++ b/src/app/ws3/ws3.component.scss
@@ -17,11 +17,12 @@
 .gallery-block.compact-gallery .item {
   overflow: hidden;
   margin-bottom: 0;
-  background: black;
+  background: white;
   opacity: 1;
 }
 
 .gallery-block.compact-gallery .item .image {
+  transform: scale(0.7);
   transition: 0.8s ease;
 }
 
@@ -71,7 +72,7 @@
   }
 
   .gallery-block .zoom-on-hover:hover .image {
-    transform: scale(1.3);
+    transform: scale(0.9);
     opacity: 0.7;
   }
 }
