--- a/src/app/ws2/productList/productGridTile/productGridTile.component.html
+++ b/src/app/ws2/productList/productGridTile/productGridTile.component.html
@@ -1,4 +1,9 @@
-<div style="color: darkorchid;">Name: {{product.Name}}</div>
-<img id="product.PublishProductId" class="img-responsive b-lazy"
-     [src]="product.ImageSmallPath"
-     alt="Product"/>
+<div>
+  <a class="lightbox" href="http://localhost:44762/Data/Media/Catalog/1/400/e4ac192b-17b4-4820-931f-feb604006d66cashews.jpg">
+    <img class="img-fluid image" [src]="getThumbnailUrl()">
+    <span class="description">
+    <span class="description-heading">{{product.Name}}</span>
+    <span class="description-body">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc quam urna.Lorem ipsum dolor sit amet, consectetur adipiscing elit.</span>
+    </span>
+  </a>
+</div>
