--- a/src/app/ws2/categoryList/categoryList.component.html
+++ b/src/app/ws2/categoryList/categoryList.component.html
@@ -1,3 +1,3 @@
 <div *ngFor="let category of categories">
-  <h2>{{category.CategoryName}}</h2>
+  <h2 (click)="selectCategory(category)" [class.selected]="category==selectedCategory">{{category.CategoryName}}</h2>
 </div>
