Making product list more dynamic.

--- a/src/app/ws2/ws2.component.html
+++ b/src/app/ws2/ws2.component.html
@@ -1,4 +1,8 @@
-<app-category-list [categories]="categories"></app-category-list>
+<app-category-list [categories]="categories" (onSelectedCategory)="onSelectedCategoryChanged($event)"></app-category-list>
+<div *ngIf="selectedCategory !== null">
+  <h1 style="color: dodgerblue">{{selectedCategory.CategoryName}}</h1>
+  <app-product-list [categoryId]="selectedCategory.CategoryId"></app-product-list>
+</div>
 <div *ngFor="let category of categories">
   <h2>OLD: {{category.CategoryName}}</h2>
   <app-product-list [categoryId]="category.CategoryId"></app-product-list>
