--- a/src/app/ws2/productList/productList.component.html
+++ b/src/app/ws2/productList/productList.component.html
@@ -1,4 +1,5 @@
 <section class="gallery-block compact-gallery">
+  <h3>Product list for category: {{categoryId}}</h3>
   <div class="container">
     <div class="row no-gutters">
       <app-product-grid-tile class="col-md-6 col-lg-4 item zoom-on-hover" *ngFor="let product of products" [product]="product"></app-product-grid-tile>
