Menu improvements and categories now in menu.

--- a/src/app/ws2/categoryList/categoryList.component.scss
+++ b/src/app/ws2/categoryList/categoryList.component.scss
@@ -1,3 +1,23 @@
+@import "src/theme/theme-variables";
+
+.navbar {
+  margin-bottom: $spacer;
+}
+
+.nav-link.dropdown-toggle {
+  cursor: pointer;
+}
+
+
+
+
+
+
+
+
+
+
+
 .selected {
   color: aqua;
 }
