--- a/src/app/ws2/categoryList/categoryList.component.html
+++ b/src/app/ws2/categoryList/categoryList.component.html
@@ -1,3 +1,18 @@
-<div *ngFor="let category of categories">
-  <h2 (click)="selectCategory(category)" [class.selected]="category==selectedCategory">{{category.CategoryName}}</h2>
-</div>
+<!--<div *ngFor="let category of categories">-->
+  <!--<h2 (click)="selectCategory(category)" [class.selected]="category==selectedCategory">{{category.CategoryName}}</h2>-->
+<!--</div>-->
+
+<header>
+  <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+    <div id="navbar-menu" class="collapse navbar-collapse float-xs-none">
+      <div class="navbar-nav">
+        <div *ngFor="let category of categories">
+          <a class="nav-item nav-link text-lowercase" (click)="selectCategory(category)">
+            <i class="fas fa-window-maximize"></i>
+            <span translate>{{category.CategoryName}}</span>
+          </a>
+        </div>
+      </div>
+    </div>
+  </nav>
+</header>
