Making in-browser filtering of products work.

--- a/src/app/core/shell/shell.component.html
+++ b/src/app/core/shell/shell.component.html
@@ -1,3 +1,3 @@
 <app-header [menu]="menu"></app-header>
-<app-header-row-2 [menu]="menu"></app-header-row-2>
+<!--<app-header-row-2 [menu]="menu"></app-header-row-2>-->
 <router-outlet></router-outlet>
