Making tiles smaller.

--- a/src/app/ws2/productList/productList.component.html
+++ b/src/app/ws2/productList/productList.component.html
@@ -2,7 +2,7 @@
   <h3>Product list for category: {{categoryId}}</h3>
   <div class="container">
     <div class="row no-gutters">
-      <app-product-grid-tile class="col-md-6 col-lg-4 item zoom-on-hover" *ngFor="let product of products | myfilter:filterArgs" [product]="product"></app-product-grid-tile>
+      <app-product-grid-tile class="col-xs-4 col-sm-4 col-md-3 col-lg-2 item zoom-on-hover" *ngFor="let product of products | myfilter:filterArgs" [product]="product"></app-product-grid-tile>
     </div>
   </div>
 </section>
