Minor UI cleanup.

--- a/src/app/ws2/productList/productGridTile/productGridTile.component.html
+++ b/src/app/ws2/productList/productGridTile/productGridTile.component.html
@@ -1,5 +1,5 @@
 <div>
-  <a class="lightbox" href="http://localhost:44762/Data/Media/Catalog/1/400/e4ac192b-17b4-4820-931f-feb604006d66cashews.jpg">
+  <a class="lightbox">
     <img class="img-fluid image" [src]="getThumbnailUrl()">
     <span class="description">
     <span class="description-heading">{{product.Name}}</span>
