Improving UI State tracking.

--- a/src/app/ws2/productList/productGridTile/productGridTile.component.scss
+++ b/src/app/ws2/productList/productGridTile/productGridTile.component.scss
@@ -39,8 +39,9 @@
 }
 
 .description .description-heading {
-  font-size: 1em;
+  font-size: 1.3em;
   font-weight: bold;
+  line-height: 1.2em;
 }
 
 .description .description-body {
