Fixing image zoom on hover.

--- a/src/app/ws2/productList/productGridTile/productGridTile.component.html
+++ b/src/app/ws2/productList/productGridTile/productGridTile.component.html
@@ -1,4 +1,4 @@
-<div>
+<div class="zoom-on-hover">
   <a class="lightbox">
     <img class="img-fluid image" [src]="getThumbnailUrl()">
     <span class="description">
