--- a/src/app/ws2/productList/productGridTile/productGridTile.component.scss
+++ b/src/app/ws2/productList/productGridTile/productGridTile.component.scss
@@ -59,8 +59,8 @@
     opacity: 1;
   }
 
-  .image:hover {
-    transform: scale(0.9);
+  .zoom-on-hover:hover .image {
+    transform: scale(0.95);
     opacity: 0.7;
   }
 }
