Adding full fetch of sliders from API. Making small improvements.

--- a/src/app/core/shell/header/header.component.html
+++ b/src/app/core/shell/header/header.component.html
@@ -6,7 +6,7 @@
     </button>
     <div id="navbar-menu" class="collapse navbar-collapse float-xs-none" [ngbCollapse]="menuHidden">
       <div class="navbar-nav">
-        <div *ngFor="let item of menu.items">
+        <div *ngFor="let item of menu.items" [title]="item.description">
           <a class="nav-item nav-link text-lowercase" routerLink="/{{item.link}}" routerLinkActive="active">
             <i class="fas fa-window-maximize"></i>
             <span translate>{{item.name}}</span>
