--- a/src/app/ws2/categoryList/categoryList.component.html
+++ b/src/app/ws2/categoryList/categoryList.component.html
@@ -1,6 +1,6 @@
 <header>
   <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-    <div id="navbar-menu" class="collapse navbar-collapse float-xs-none">
+    <div id="navbar-menu">
       <div class="navbar-nav">
         <div *ngFor="let category of categories">
           <a class="nav-item nav-link" [class.selected]="isSelected(category)" (click)="selectCategory(category)">
