--- a/src/app/ws2/ws2.component.scss
+++ b/src/app/ws2/ws2.component.scss
@@ -7,3 +7,8 @@
   user-select: none; /* Non-prefixed version, currently
                                   supported by Chrome and Opera */
 }
+
+h1 {
+  margin-top: 50px;
+  margin-left: 200px;
+}
