--- a/src/app/ws2/ws2.component.html
+++ b/src/app/ws2/ws2.component.html
@@ -2,9 +2,12 @@
   <div class="noselect">
     <app-category-list [categories]="categories"
                        (onSelectedCategory)="onSelectedCategoryChanged($event)"></app-category-list>
-    <div *ngIf="selectedCategory !== null">
-      <h1 style="color: dodgerblue">{{selectedCategory.CategoryName}}</h1>
-      <app-product-list [categoryId]="selectedCategory.CategoryId" [filterArgs]="filterArgs" [products]="products"></app-product-list>
+    <div>
+      <h1 style="color: dodgerblue">
+        <span *ngIf="selectedCategory">{{selectedCategory.CategoryName}}</span>
+        <span *ngIf="!selectedCategory" translate>AllProducts</span>
+      </h1>
+      <app-product-list [filterArgs]="filterArgs" [products]="products"></app-product-list>
     </div>
   </div>
 </div>
