--- a/src/app/ws4/ws4.component.html
+++ b/src/app/ws4/ws4.component.html
@@ -1,1 +1,5 @@
 <h1>ws4</h1>
+<h5>{{items.length}} items created in memory, showing {{end-start}} sample items below:</h5>
+<div *ngFor="let item of items | slice:start:end">
+  <p>{{item.name}}, {{item.url}}, {{item.price}}</p>
+</div>
