WS5 - orders, WS6 - Web Store CMS_MODE

--- a/src/app/ws5/ws5.component.html
+++ b/src/app/ws5/ws5.component.html
@@ -1,1 +1,6 @@
-<h1>ws5</h1>
+<!--<div>-->
+  <!--<div *ngFor="let order of ordersList">-->
+    <!--<h3>{{order.ModifiedByName}}</h3>-->
+
+  <!--</div>-->
+<!--</div>-->
