--- a/src/app/ws6/ws6.component.html
+++ b/src/app/ws6/ws6.component.html
@@ -1,1 +1,1 @@
-<h1>ws6</h1>
+<iframe src="http://localhost:3288/deal_of_the_month" style="border:0px solid blue;" height="3500" width="100%"></iframe>
